--- a/Weather Application/HTML/index.html
+++ b/Weather Application/HTML/index.html
@@ -5,7 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Weather Forecast</title>
 		<!-- Favicon -->
-		<link rel="icon" type="image/png" href="/Weather Application/Images/mist.png" />
+		<link
+			rel="icon"
+			type="image/png"
+			href="/Weather Application/Images/mist.png"
+		/>
 		<!-- Link to external CSS file -->
 		<link rel="stylesheet" href="/Weather Application/CSS/style.css" />
 	</head>
