--- a/Quiz App/HTML/index.html
+++ b/Quiz App/HTML/index.html
@@ -38,7 +38,7 @@
 			</div>
 		</div>
 
-		<!-- Include the JavaScript file for the quiz application -->
+		<!-- JavaScript file-->
 		<script src="/Quiz App/JS/app.js"></script>
 	</body>
 </html>
